@@ -1,3 +1,7 @@
+2007-03-02 Raphael Neider <rneider AT web.de>
+
+	* src/pic/gen.c (genGenPointerSet): removed bogus assertion
+
 2007-02-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
 
 	* device/lib/mcs51/crtxclear.asm: pdata segment of 256 byte would not
